Fix metric calculation for zero-organic data cases